Add custom PyTrees notebook and extend MLP tutorial
- Added new notebook covering custom PyTree implementations
- Demonstrates how to make custom classes work with JAX tree operations
- Includes examples of flatten/unflatten functions for custom containers
- Extended MLP notebook with transition note to custom PyTrees topic

--- a/4_JAX_MLP.ipynb
+++ b/4_JAX_MLP.ipynb
@@ -283,9 +283,17 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "0fea900b",
+   "metadata": {},
+   "source": [
+    "#### In order to be able to build NN libs and layers such as NN.Linear, we need a couple more tricks up our sleeve!"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b9a1faea",
+   "id": "d5c82442",
    "metadata": {},
    "outputs": [],
    "source": []
