--- a/5_JAX_Custom_PyTrees.ipynb
+++ b/5_JAX_Custom_PyTrees.ipynb
@@ -136,8 +136,276 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "id": "ace61b17",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def flatten_MyContainer(container):\n",
+    "    # Returns an iterable over container contents, and aux data\n",
+    "    flat_contents = [container.a, container.b, container.c]\n",
+    "\n",
+    "    # We dont want name to appear as a child, so it is auxiliary data\n",
+    "    # Auxiliary Data is often a description of the strucuture of a node,\n",
+    "    # Eg: Keys of a dict -> anything that is not a node's children\n",
+    "\n",
+    "    aux_data = container.name\n",
+    "\n",
+    "    return flat_contents, aux_data"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "id": "b0190790",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def unflatten_MyContainer(aux_data, flat_contents):\n",
+    "    return MyContainer(aux_data, *flat_contents)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "id": "69879b2b",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Register a custom PyTree node\n",
+    "jax.tree_util.register_pytree_node(MyContainer, flatten_MyContainer, unflatten_MyContainer)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "6dccf3c6",
+   "metadata": {},
+   "source": [
+    "- register_pytree_node teaches jax how to traverse and manipulate custom Python classes as PyTrees\n",
+    "- When we create custom classes, JAX does not know how to look inside it (which is why previously we saw only 2 leaves)\n",
+    "- Without proper pytree registration, JAX operations fail<br><br><br>\n",
+    "- The flatten function basically tells JAX how to decompose your object into children and auxiliary data\n",
+    "- The unflatten function tells JAX how to reconstruct your object from flattened representation"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "id": "47799e08",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[<__main__.MyContainer object at 0x0000019FDC21F230>, <__main__.MyContainer object at 0x0000019FAACEE0D0>]\n",
+      " has 6 leaves: \n",
+      "[1, 2, 3, 4, 5, 6]\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Let's try again\n",
+    "leaves = jax.tree.leaves(example_pytree)\n",
+    "print(f\"{repr(example_pytree):<45}\\n has {len(leaves)} leaves: \\n{leaves}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "id": "0616093d",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[2, 3, 4, 5, 6, 7]\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Lets try applying tree.map again\n",
+    "res = jax.tree.map(lambda x: x+1, example_pytree)\n",
+    "print(jax.tree.leaves(res))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "fe77b59f",
+   "metadata": {},
+   "source": [
+    "### Common Gotcha for PyTrees: Mistaking nodes for leaves/children"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "id": "71a8f07a",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[Array([[0., 0., 0.],\n",
+      "       [0., 0., 0.]], dtype=float32), Array([[0., 0., 0., 0.],\n",
+      "       [0., 0., 0., 0.],\n",
+      "       [0., 0., 0., 0.]], dtype=float32)]\n"
+     ]
+    }
+   ],
+   "source": [
+    "zeros_tree = [jnp.zeros((2,3)), jnp.zeros((3,4))]\n",
+    "print(zeros_tree)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "id": "9353e99d",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[(2, 3), (3, 4)]\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Try to make another similar tree with ones instead of zeros\n",
+    "shapes = jax.tree.map(lambda x:x.shape, zeros_tree)\n",
+    "print(shapes)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "id": "855cdb3e",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[(Array([1., 1.], dtype=float32), Array([1., 1., 1.], dtype=float32)), (Array([1., 1., 1.], dtype=float32), Array([1., 1., 1., 1.], dtype=float32))]\n"
+     ]
+    }
+   ],
+   "source": [
+    "ones_tree = jax.tree.map(jnp.ones, shapes)\n",
+    "print(ones_tree)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "74414a6e",
+   "metadata": {},
+   "source": [
+    "#### Issue: Treating the tuples as PyTree nodes instead of leaves!"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "1a19213f",
+   "metadata": {},
+   "source": [
+    "- zeros_tree is a list with two leaves (2 arrays)\n",
+    "- the .shape returns a tuple; so shapes is a list containing 2 tuples\n",
+    "- JAX treats tuples as PyTree containers, not leaves"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "04ce0c40",
+   "metadata": {},
+   "source": [
+    "List containing:<br>\n",
+    "  ├─ Tuple(2, 3)  ← This is a CONTAINER with 2 children<br>\n",
+    "  │   ├─ 2<br>\n",
+    "  │   └─ 3<br>\n",
+    "  └─ Tuple(3, 4)  ← This is a CONTAINER with 2 children<br>\n",
+    "      ├─ 3<br>\n",
+    "      └─ 4<br>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "a8240883",
+   "metadata": {},
+   "source": [
+    "- Total leaves: 4 scalars [2, 3, 3, 4]\n",
+    "- When we apply do jax.tree.map(...), JAX applies jnp.ones to each leaf (each scalar)\n",
+    "- Then the final structure maintains the original tree (with 4 leaves)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "06dc49e1",
+   "metadata": {},
+   "source": [
+    "#### Solution 1: Get shapes directly without Intermediate tree"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "id": "8d3a62ca",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[Array([[1., 1., 1.],\n",
+      "       [1., 1., 1.]], dtype=float32), Array([[1., 1., 1., 1.],\n",
+      "       [1., 1., 1., 1.],\n",
+      "       [1., 1., 1., 1.]], dtype=float32)]\n"
+     ]
+    }
+   ],
+   "source": [
+    "ones_tree = jax.tree.map(lambda x: jnp.ones(x.shape), zeros_tree)\n",
+    "print(ones_tree)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "b71c9061",
+   "metadata": {},
+   "source": [
+    "#### Solution 2: Use tree_map with is_leaf parameter"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "id": "c8ded551",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[Array([[1., 1., 1.],\n",
+      "       [1., 1., 1.]], dtype=float32), Array([[1., 1., 1., 1.],\n",
+      "       [1., 1., 1., 1.],\n",
+      "       [1., 1., 1., 1.]], dtype=float32)]\n"
+     ]
+    }
+   ],
+   "source": [
+    "shapes = jax.tree.map(lambda x: x.shape, zeros_tree)\n",
+    "ones_tree = jax.tree.map(jnp.ones, shapes, is_leaf= lambda x: isinstance(x, tuple))\n",
+    "print(ones_tree)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "91c225bf",
    "metadata": {},
    "outputs": [],
    "source": []
