--- a/5_JAX_Custom_PyTrees.ipynb
+++ b/5_JAX_Custom_PyTrees.ipynb
@@ -403,6 +403,22 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "6998c6ca",
+   "metadata": {},
+   "source": [
+    "#### Great! Now we can create custom layers and train even bigger neural networks!"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "0454bfa5",
+   "metadata": {},
+   "source": [
+    "#### But what if our NN is really big? Can we train it across multiple devices?"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "id": "91c225bf",
